--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,18 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <executions>
           <execution>
+	<plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+           <execution>
+             <id>copy-dependencies</id>
+             <phase>package</phase>
+             <goals><goal>copy-dependencies</goal></goals>
+			</execution>
+		 </executions> 
+	 </plugin>
             <!-- Spring Boot Actuator displays build-related information
               if a META-INF/build-info.properties file is present -->
             <goals>
@@ -220,13 +232,16 @@
           </execution>
         </executions>
       </plugin>
+	  
+	  
+	  
 
       <!-- Spring Boot Actuator displays build-related information if a git.properties
         file is present at the classpath -->
       <plugin>
         <groupId>pl.project13.maven</groupId>
-        <artifactId>git-commit-id-plugin</artifactId>
-        <executions>
+        <!-- artifactId>git-commit-id-plugin</artifactId -->
+        <!--executions>
           <execution>
             <goals>
               <goal>revision</goal>
@@ -241,7 +256,7 @@
           </generateGitPropertiesFilename>
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
         </configuration>
-      </plugin>
+      </plugin -->
 
       <plugin>
         <groupId>ro.isdc.wro4j</groupId>
