--- a/pom.xml
+++ b/pom.xml
@@ -235,9 +235,9 @@
 
       <!-- Spring Boot Actuator displays build-related information if a git.properties
         file is present at the classpath -->
-      <plugin>
+      <!--<plugin>
         <groupId>pl.project13.maven</groupId>
-        <!--<artifactId>git-commit-id-plugin</artifactId>-->
+        <artifactId>git-commit-id-plugin</artifactId>
         <executions>
           <execution>
             <goals>
@@ -253,7 +253,7 @@
           </generateGitPropertiesFilename>
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
         </configuration>
-      </plugin>
+      </plugin>-->
 
       <plugin>
         <groupId>ro.isdc.wro4j</groupId>
