--- a/pom.xml
+++ b/pom.xml
@@ -235,7 +235,7 @@
 
       <!-- Spring Boot Actuator displays build-related information if a git.properties
         file is present at the classpath -->
-      <!--<plugin>
+      <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
         <executions>
@@ -253,7 +253,7 @@
           </generateGitPropertiesFilename>
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
         </configuration>
-      </plugin>-->
+      </plugin>
 
       <plugin>
         <groupId>ro.isdc.wro4j</groupId>
