--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8u282-jre
 EXPOSE 8080
-COPY target/spring-petclinic-2.2.0.BUILD-SNAPSHOT.jar/se441/spring-petclinic:standalone
+COPY target/spring-petclinic-2.2.0.BUILD-SNAPSHOT.jar /spring-petclinic/Docker.jar
 ENTRYPOINT ["java", "-jar", "spring-petclinic-2.2.0.BUILD-SNAPSHOT.jar"]
