--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.1'
+services:
 mysql:
   image: mysql:5.7
   ports:
@@ -8,9 +10,10 @@ mysql:
     - MYSQL_USER=petclinic
     - MYSQL_PASSWORD=petclinic
     - MYSQL_DATABASE=petclinic
-    
+    command: "--innodb_use_native_aio=0"
     volumes:
     - "./conf.d:/etc/mysql/conf.d:ro"
+    - "./data.d:/var/lib/mysql"
    
   
 
