--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 mysql:
   image: mysql:5.7
   ports:
-    - "3306:3306"
+    - "3306:3306/tcp"
   environment:
     - MYSQL_ROOT_PASSWORD=
     - MYSQL_ALLOW_EMPTY_PASSWORD=true
